Fix alignment and mixin in _fonts.scss

--- a/assets/styles/tools/_fonts.scss
+++ b/assets/styles/tools/_fonts.scss
@@ -32,8 +32,14 @@
 // @output The `@font-face` at-rules specifying the custom fonts.
 
 @mixin font-faces($webfonts, $dir) {
-    @each $webfont in $webfonts {
-        @include font-face($webfont, $dir);
+    @if (list-separator($webfonts) == "comma") {
+        @each $webfont in $webfonts {
+            @include font-face($webfont, $dir);
+        }
+    } @else if (list-separator($webfonts) == "space") {
+        @include font-face($webfonts, $dir);
+    } @else {
+        @error 'Invalid list separator for $webfonts';
     }
 }
 
@@ -47,8 +53,8 @@
 
 @function ff($font-family) {
     @if not map-has-key($font-families, $font-family) {
-       @error "No font-family found in $font-families map for `#{$font-family}`.";
-   }
+        @error "No font-family found in $font-families map for `#{$font-family}`.";
+    }
 
     $value: map-get($font-families, $font-family);
     @return $value;
